--- a/DemoCefAd/Resources/index.html
+++ b/DemoCefAd/Resources/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+
 <html>
 <head>
     <title>Fullscreen Video with Panel Demo</title>
@@ -17,7 +19,8 @@
             justify-content: center;
             top: 0;
             left: 0;
-            width: 50%;
+            bottom:0;
+            width:48%;
             height: 100%;
             background-color: #1a233e;
             color: white;
@@ -36,18 +39,23 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: auto;
+            object-fit: cover;
         }
 
-        #text {  
+        #text {
             line-height: 1.2;
         }
     </style>
 </head>
-<body style="background: #1c1c1c;">
+<body style="background: #1c1c1c;" >
     <div id="panel">
         <p id="text">Eat <span>this</span> food when you are hungry</p>
     </div>
-    <video id="video" src="AD_0.mp4" autoplay loop muted preload="metadata"></video>
+    <!--<video id="video" src="AD_0.mp4" autoplay loop muted></video>-->
+
+    <video width="755" height="420" autoplay>
+        <source src="AD_1.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'> 
+    </video>
 </body>
 </html>
